Adding to automation profile

--- a/.github/workflows/qa-reset-automation.yml
+++ b/.github/workflows/qa-reset-automation.yml
@@ -6,12 +6,20 @@ jobs:
   update-qa:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - run: | 
-      git checkout master
-      git fetch --all
-      git checkout qa
-      git merge --ff-only origin/main
-      git push 
+    - name: Install git
+      run: |
+        apt-get install -y git
+        git --version
+        echo "Path is ... $PATH"
+        PATH=$PATH:$(which git)
+        echo "Path is ... $PATH"
+    - name: Update QA
+        uses: actions/checkout@v2
+        run: | 
+          git checkout master
+          git fetch --all
+          git checkout qa
+          git merge --ff-only origin/main
+          git push 
 
     
