--- a/.github/workflows/qa-reset-automation.yml
+++ b/.github/workflows/qa-reset-automation.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Install git
-      run: |
+      - run: |
         apt-get install -y git
         git --version
         echo "Path is ... $PATH"
