--- a/.github/workflows/qa-reset-automation.yml
+++ b/.github/workflows/qa-reset-automation.yml
@@ -1,16 +1,13 @@
 name: update-qa-after-release
-on: 
-  push:
-    branches: [ master ]
+on: push
 jobs:
   update-qa:
     runs-on: ubuntu-latest
     steps:
-    - name: Update QA
-      uses: actions/checkout@v2
-      with: 
-        ref: master
-      run: | 
+      - name: Update QA
+        uses: actions/checkout@v2
+        run: | 
+          git checkout master
           git fetch --all
           git checkout qa
           git merge --ff-only origin/main
