--- a/.github/workflows/qa-reset-automation.yml
+++ b/.github/workflows/qa-reset-automation.yml
@@ -9,7 +9,7 @@ jobs:
       - run: git checkout master
       - run: git fetch --all
       - run: git checkout qa
-      - run: git merge --ff-only origin/main
+      - run: git merge --ff-only origin/master
       - run: git push 
         
 
