--- a/.github/workflows/qa-reset-automation.yml
+++ b/.github/workflows/qa-reset-automation.yml
@@ -5,11 +5,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: git fetch
       - run: git checkout master
       - run: git fetch --all
       - run: git checkout qa
-      - run: git merge --ff-only master --allow-unrelated-histories
+      - run: git merge
+      - run: git merge --ff-only master
       - run: git push 
         
 
