--- a/.github/workflows/qa-reset-automation.yml
+++ b/.github/workflows/qa-reset-automation.yml
@@ -5,6 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: git config --global user.email "living2snowboard@gmail.com"
+      - run: git config --global user.name "WyldWanderer"
       - run: git checkout master
       - run: git fetch --all
       - run: git checkout qa
