--- a/.github/workflows/qa-reset-automation.yml
+++ b/.github/workflows/qa-reset-automation.yml
@@ -9,7 +9,7 @@ jobs:
       - run: git config --global user.name "WyldWanderer"
       - run: git fetch --all
       - run: git checkout qa
-      - run: git merge master --allow-unrelated-histories
+      - run: git merge master
       - run: git push 
         
 
