adding specification to only run on pushing to master

--- a/.github/workflows/qa-reset-automation.yml
+++ b/.github/workflows/qa-reset-automation.yml
@@ -1,5 +1,7 @@
 name: update-qa-after-release
-on: push
+on: 
+  push:
+    branch: [ origin/master ]
 jobs:
   update-qa:
     runs-on: ubuntu-latest
