--- a/.github/workflows/qa-reset-automation.yml
+++ b/.github/workflows/qa-reset-automation.yml
@@ -9,9 +9,11 @@ jobs:
       - uses: actions/checkout@v2
       - run: git config --global user.email "living2snowboard@gmail.com"
       - run: git config --global user.name "WyldWanderer"
+      - run: git checkout master
       - run: git fetch --all
       - run: git checkout qa
-      - run: git merge origin/master --allow-unrelated-histories
+      - run: git merge
+      - run: git merge --ff-only origin/master
       - run: git push 
         
 
