--- a/.github/workflows/qa-reset-automation.yml
+++ b/.github/workflows/qa-reset-automation.yml
@@ -1,7 +1,7 @@
 name: update-qa-after-release
 on: 
   push:
-    branch: [ origin/master ]
+    branch: [ master ]
 jobs:
   update-qa:
     runs-on: ubuntu-latest
