--- a/.github/workflows/qa-reset-automation.yml
+++ b/.github/workflows/qa-reset-automation.yml
@@ -1,7 +1,10 @@
 name: update-qa-after-release
 on: 
-  push:
-    branch: [ master ]
+  pull_request:
+    types:
+     - opened
+    branches: 
+     - master
 jobs:
   update-qa:
     runs-on: ubuntu-latest
