--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts -r @cypress/instrument-cra start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,8 +38,5 @@
     ]
   },
   "devDependencies": {
-    "@cypress/code-coverage": "^3.9.12",
-    "@cypress/instrument-cra": "^1.4.0",
-    "cypress": "^9.3.1"
   }
 }
